--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -12,6 +12,16 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!python -m pip install --upgrade pip\n",
+        "!python -m pip install -r requirements.txt"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 1,
       "metadata": {
         "id": "m05r6Iuf3Ar0"
